--- a/xpdconf/examples/xpd.yaml
+++ b/xpdconf/examples/xpd.yaml
@@ -3,9 +3,9 @@ archive_root_dir: /direct/xf28id2/pe1_data
 base_dir: /direct/xf28id2/pe2_data
 beamline_host_name: [xf28id2-ws2, xf28id2-ws3]
 beamline_id: 28-id-2
-blconfig_dir_name: xpdconfig
+blconfig_dir_name: xpdConfig
 blconfig_name: xpd_beamline_config.yml
-calib_config_name: xpdacq_calib_info.yml
+calib_config_name: xpdAcq_calib_info.yml
 dark_window: 3000
 facility: NSLS-II
 frame_acquire_time: 0.1
