--- a/xpdconf/examples/sim.yaml
+++ b/xpdconf/examples/sim.yaml
@@ -4,7 +4,7 @@ base_dir: ~/acqsim
 beamline_host_name: [xf28id2-ws2, xf28id2-ws3]
 beamline_id: 28-id-2
 blconfig_dir_name: xpdConfig
-blconfig_name: xpd_beamline_config.yml
+blconfig_name: XPD_beamline_config.yml
 calib_config_name: xpdAcq_calib_info.yml
 dark_window: 3000
 facility: sim
