pull orch from source

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ install:
   - export GIT_FULL_HASH=`git rev-parse HEAD`
   - conda create -n testenv python=$TRAVIS_PYTHON_VERSION
   - source activate testenv
-  - pip install git+git@github.com:xpdAcq/orch.git$egg=orch
+  - pip install git+git://github.com/xpdAcq/orch.git$egg=orch
   - orch requirements/build.yaml
   - pip install .
 
