--- a/xpdconf/examples/sim.yaml
+++ b/xpdconf/examples/sim.yaml
@@ -26,3 +26,5 @@ mask_kwargs:
 dark_field_key : sc_dk_field_uid
 exp_broker_name: 'temp'
 shutter_sleep: .1
+inbound_proxy_address: '127.0.0.1:5567'
+outbound_proxy_address: '127.0.0.1:5568'
