--- a/xpdconf/examples/sim.yaml
+++ b/xpdconf/examples/sim.yaml
@@ -30,4 +30,4 @@ inbound_proxy_address: '127.0.0.1:5567'
 outbound_proxy_address: '127.0.0.1:5568'
 radiograph_names: ['blackfly_det']
 radiogram_dets: ['blackfly_det']
-diffraction_dets: ['pe1c', 'pe1', 'pe2c', 'pe2', 'pe1_image', 'pe2_image', 'pe3_image']
+diffraction_dets: ['pe1c', 'pe1', 'pe2c', 'pe2', 'pe1_image', 'pe2_image', 'pe3_image', 'dexela_image']
