add ophyd to requirements

--- a/score.yaml
+++ b/score.yaml
@@ -17,6 +17,8 @@ run:
     default: {conda: databroker}
   pyyaml:
     default: {conda: pyyaml}
+  ophyd:
+    default: {conda: ophyd}
 test:
   codecov:
     default: {conda: codecov}
