--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ include CHANGELOG.rst
 include LICENSE
 include README.md
 
-recursive-include xpdConf/examples *.yaml
+recursive-include xpdconf/examples *.yaml
 
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
