--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: configure conda
         run: |
-          conda config --append channels nsls2forge
+          conda config --add channels conda-forge
 
       - name: install requirements
         run: >-
